@@ -5,6 +5,10 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+February 9, 2011
+! [antonin] renamed "java sources" to "java-sources" to avoid blank space
+- [antonin] removed opj_config.h.in from svn, as it is automaticaly generated by autoheader when calling ./bootstrap.sh
+
 February 6, 2011
 * [antonin] cmake : fixed installed links to openjpeg.h and openjpeg3d.h.
 
